fixed some spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 #wrapper {
-  width: 960px;
+  width: 90%;
   height: auto; /* so page flexes with content*/
   background: #eeeeee;
   border-left: 5px solid #ffffff;
@@ -41,14 +41,15 @@ body {
   float: left;
   width: 275px;
   height: 100%;
-  background-color:
 }
 #menu ul {
   float: left;
   height: auto;
   width: 200px;
+  margin-left: -200px;
 }
 #menu ul li {
+
   list-style: none;
   padding: 5px;
   text-align: center;
@@ -60,6 +61,34 @@ body {
   padding: 10px 0px;
   display: block;
 }
-#menu ul li a: hover {
-  color: #fff;
+#menu ul li a:hover {
+  color: #ffffff;
+}
+#content {
+  /*margin-top: -467px;*/
+  margin-left: -200px;
+  float: left;
+  width: 1000px;
+  height: 100%;
+  padding-left: 15px;
+  letter-spacing: 1;
+  border-left: 3px solid #ffffff;
+}
+h2 {
+text-align: center;
+padding: 5px;
+border-bottom: 1px solid #ffffff;
+}
+p {
+  text-indent: 50px;
+  line-height: 25px;
+}
+ iframe {
+   float: right;
+   padding: 0px 0px 5px 5px;
+}
+
+.top a {
+  color: #4E4FE3;
+  text-decoration: none;
 }
